--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "engines": {
+    "node": ">=14 <15"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
